<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="something_wrong">服务器正在维护中，请稍后再试！</string>
  <!-- 主页 -->
    <string name="main_tab_info">首页</string>
    <string name="main_tab_shop">分类</string>
    <string name="main_tab_message">购物车</string>
    <string name="main_tab_account">我</string>
    <!-- 账户 -->
    <string name="account_main_title">我的账户</string>
    <string name="account_user_alias_prompt">用户昵称</string>
    <string name="account_user_login">用户登录</string>
    <string name="account_user_call">呼叫</string>
    <string name="account_user_cue">提示</string>
    <string name="account_username_not_null">用户账号输入不能为空，请重新输入！</string>
    <string name="account_password_not_null">用户密码输入不能为空，请重新输入！</string>
    <string name="account_cellphone_input_null_prompt">手机号码不能为空，请重新输入！</string>
    <string name="account_cellphone_input_wrong_prompt">您输入的手机号码格式不对，请输入正确的手机号码！</string>
    <string name="account_user_register">用户注册</string>
    <string name="account_username">账户</string>
    <string name="account_gldjc_username">请输入用户名</string>
    <string name="account_password">密码</string>
    <string name="account_new_password">新密码</string>
    <string name="account_sure_password">确认密码</string>
    <string name="account_remember_password">记住密码</string>
    <string name="account_auto_login">自动登录</string>
    <string name="account_user_name_prompt">用户名：</string>
    <string name="account_modify_password">修改密码</string>
    <string name="account_password_input_prompt">请输入正确的密码！</string>
    <string name="account_new_password_input_prompt">新密码不能为空，请重新输入！</string>
    <string name="account_again_password_input_prompt">两次新密码输入不一致，请重新输入！</string>
    <string name="account_password_input_same_prompt">输入的新密码与旧密码一样，请重新输入！</string>
    <string name="account_feedback">意见反馈</string>
    <string name="account_cooperation">商务合作</string>
    <string name="account_about_us">关于我们</string>
    <string name="account_version_update">版本更新</string>
    <string name="account_current_version">当前V%1$s</string>
    <string name="account_user_info">个人信息</string>
    <string name="account_user_icon">头像</string>
    <string name="account_user_alias">昵称</string>
    <string name="account_user_realname">姓名</string>
    <string name="account_user_gender">性别</string>
    <string name="account_user_address">所在地</string>
    <string name="account_user_sign">个性签名</string>
    <string name="account_bind_phone">绑定手机</string>
    <string name="account_gender_man">男</string>
    <string name="account_gender_girl">女</string>
    <string name="account_gender_secret">保密</string>
    <string name="account_no_set_prompt">暂无设置</string>
    <string name="account_gender_prompt">设置性别</string>
    <string name="account_alias_prompt">设置昵称</string>
    <string name="account_sign_prompt">设置个性签名</string>
    <string name="account_name_prompt">设置姓名</string>
    <string name="account_address_prompt">设置所在地</string>
    
       <string name="btn_login">登录</string>
       <string name="btn_logout">退出登录</string>
    <string name="delete">删除</string>
</resources>