<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:clipToPadding="false"
                android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dip">


        <LinearLayout
            android:id="@+id/ll_login_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edit"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip">

                <EditText
                    android:id="@+id/et_username"
                    style="@style/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="45dip"

                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/icon_username"
                    android:drawablePadding="10dip"
                    android:gravity="center_vertical"
                    android:hint="@string/account_gldjc_username"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColorHint="#DCDCDC"
                    android:textCursorDrawable="@null"/>


            </RelativeLayout>

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_1"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/lv_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/line"
                android:visibility="gone">
            </ListView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="45dip"

                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dip"
                    android:gravity="center_vertical"
                    android:hint="@string/account_password"
                    android:inputType="textPassword"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColorHint="#DCDCDC"
                    android:textCursorDrawable="@null"/>

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_positive"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_login_selector"
            android:text="@string/btn_login"/>
    </LinearLayout>


</RelativeLayout>